--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Ecomoda</title>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <h1>Página de prueba :D</h1>
     <h2>web ui developer</h2>
     <p>Hola mundo xd</p>
+    <h2>Bienvenidos a nuestra página</h2>
 </body>
 </html>
