añadí un input y un p

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
     <h1>Página de prueba :D</h1>
     <h2>web ui developer</h2>
-    <p>Hola mundo xd</p>
     <h2>Bienvenidos a nuestra página</h2>
+    <p>¿Tienes alguna sugerencia? envíala</p>
+    <input type="text" placeholder="Envíanos una sugerencia">
 </body>
 </html>
