añadí otro input

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     </ul>
     <p>¿Tienes alguna sugerencia? envíala</p>
     <input type="text" placeholder="Envíanos una sugerencia">
+    <input type="button" placeholder="enviar">
 </body>
 </html>
