Agregue una lista

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <h1>Página de prueba :D</h1>
     <h2>web ui developer</h2>
     <h2>Bienvenidos a nuestra página</h2>
+    <ul>
+        <li>ropa para mujer</li>
+        <li>ropa para hombre</li>
+        <li>ropa para niños</li>
+    </ul>
     <p>¿Tienes alguna sugerencia? envíala</p>
     <input type="text" placeholder="Envíanos una sugerencia">
 </body>
